--- a/InventarioPro/Client/Pages/Entrada/ListEntrada.razor
+++ b/InventarioPro/Client/Pages/Entrada/ListEntrada.razor
@@ -94,6 +94,8 @@
     private DateTime? fechaInicio;
     private DateTime? fechaFin;
     private Empresa_DTO empresa;
+    private List<Producto_DTO> productos;
+
 
 
 
@@ -107,6 +109,7 @@
             listentrada_DTO2 = listentrada_DTO;
 
             var empresaResponse = await Http.GetAsync("api/empresa/1");
+            await ObtenerProductosDesdeApi();
 
             if (empresaResponse.IsSuccessStatusCode)
             {
@@ -184,7 +187,21 @@
 
         }
     }
-
+    private async Task ObtenerProductosDesdeApi()
+    {
+        try
+        {
+            var response = await Http.GetFromJsonAsync<List<Producto_DTO>>("api/producto/GetProductos");
+            if (response != null)
+            {
+                productos = response;
+            }
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine($"Error al obtener productos: {ex.Message}");
+        }
+    }
     // Método para cerrar el formulario
     private void CerrarFormulario()
     {
@@ -237,7 +254,7 @@
                         col++;
                         worksheet.Cells[fila, col].Value = detalle.Cantidad;
                         col++;
-                        worksheet.Cells[fila, col].Value = detalle.Precio;
+                        worksheet.Cells[fila, col].Value = detalle.Costo;
                         col++;
                         worksheet.Cells[fila, col].Value = detalle.SubMontoTotal;
                         col++;
@@ -389,15 +406,16 @@
                             table.AddCell(new Cell().Add(new Paragraph("")).SetPadding(10));
                             table.AddCell(new Cell().Add(new Paragraph("")).SetPadding(10));
                         }
-
+                        Producto_DTO producto = productos.FirstOrDefault(p => p.Id == detalle.IdProducto);
+                        string nombreProducto = producto?.Nombre ?? "Producto no encontrado";
                         // Añadir los detalles de la entrada (Producto, Cantidad, Precio, Sub Monto Total)
-                        table.AddCell(new Cell().Add(new Paragraph(detalle.IdProducto.ToString()))
-                            .SetTextAlignment(iText.Layout.Properties.TextAlignment.CENTER)
-                            .SetPadding(10));
+                        table.AddCell(new Cell().Add(new Paragraph(nombreProducto))
+    .SetTextAlignment(iText.Layout.Properties.TextAlignment.CENTER)
+    .SetPadding(10));
                         table.AddCell(new Cell().Add(new Paragraph(detalle.Cantidad.ToString()))
                             .SetTextAlignment(iText.Layout.Properties.TextAlignment.CENTER)
                             .SetPadding(10));
-                        table.AddCell(new Cell().Add(new Paragraph(detalle.Precio.ToString("C")))
+                        table.AddCell(new Cell().Add(new Paragraph(detalle.Costo.ToString("C")))
                             .SetTextAlignment(iText.Layout.Properties.TextAlignment.CENTER)
                             .SetPadding(10));
                         table.AddCell(new Cell().Add(new Paragraph(detalle.SubMontoTotal?.ToString("C") ?? "N/A"))
